MDEV-12656 Crash in CREATE..SELECT..UNION with a ENUM column and NULL